# TsfPad

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  TextInputCtrl.cpp  TextLayout.cpp  TextLayout.h  TextStore.cpp  vcpkg.json
scripts/: lcompile.ps1  linstall.ps1  luninstall.ps1  prepare_env.py
scripts/config_files/: .clangd  CMakeLists.txt
src/: DisplayAttribute.cpp  DisplayAttribute.h  TextContainer.cpp  TextEditSink.cpp  TextEditor.cpp  TextEditor.h  TextInputCtrl.cpp  TextInputCtrl.h  TextLayout.cpp  TextLayout.h  TextStore.cpp  TextStore.h  TsfPad.cpp  TsfPad.rc  resource.h
